--- a/themes/stellar/source/css/_defines/theme.styl
+++ b/themes/stellar/source/css/_defines/theme.styl
@@ -15,7 +15,7 @@ $color-text-s = saturation($color-text)
 $color-text-l = lightness($color-text)
 
 set_text_dark()
-  --text-p0: hsl($color-text-h, $color-text-s, 0)
+  --text: hsl($color-text-h, $color-text-s, 0)
   --text-p1: hsl($color-text-h, $color-text-s, $color-text-l)
   --text-p2: hsl($color-text-h, $color-text-s, $color-text-l / 0.5 * 0.75)
   --text-p3: hsl($color-text-h, $color-text-s, $color-text-l / 0.5 * 1.25)
@@ -24,7 +24,7 @@ set_text_dark()
   --text-code: hsl($color-code-h, $color-code-s, $color-code-l)
 
 set_text_light()
-  --text-p0: hsl($color-text-h, $color-text-s, 100)
+  --text: hsl($color-text-h, $color-text-s, 100)
   --text-p1: hsl($color-text-h, $color-text-s, 100 - $color-text-l / 0.5 * 0.5)
   --text-p2: hsl($color-text-h, $color-text-s, 100 - $color-text-l / 0.5 * 0.75)
   --text-p3: hsl($color-text-h, $color-text-s, 100 - $color-text-l / 0.5 * 1.2)
@@ -38,8 +38,9 @@ set_text_light()
   --alpha20: rgba(white, 0.2)
   --alpha50: rgba(white, 0.5)
   --alpha60: rgba(white, 0.6)
+  --alpha75: rgba(white, 0.75)
   --alpha100: white
-  --sidebar-bg: rgba(white, 0.5)
+  --sidebar-bg: hsl($color-block-h, $color-block-s, 90)
   --block: hsl($color-block-h, $color-block-s, 95)
   --block-border: hsl($color-block-h, $color-block-s, 90)
   --block-hover: hsl($color-block-h, $color-block-s, 92)
@@ -56,8 +57,9 @@ set_darkmode()
     --alpha20: rgba(black, 0.2)
     --alpha50: rgba(black, 0.5)
     --alpha60: rgba(black, 0.6)
+    --alpha75: rgba(black, 0.75)
     --alpha100: black
-    --sidebar-bg: rgba(black, 0.64)
+    --sidebar-bg: hsl($color-block-h, $color-block-s, 24)
     set_text_light()
     @media screen and (max-width: $device-mobile-max)
       --site-bg: black
