--- a/themes/stellar/source/css/_layout/widgets/widgets.styl
+++ b/themes/stellar/source/css/_layout/widgets/widgets.styl
@@ -17,10 +17,10 @@
       padding-right: var(--gap-l)
       display: flex
       justify-content: space-between
-      align-items: center
+      align-items: baseline
       line-height: 28px
       font-weight: 500
-      font-size: $fs-12
+      font-size: $fs-13
       color: var(--text-p1)
       .item 
         display: block
@@ -36,7 +36,7 @@
         trans2: opacity background
         border-radius: 4px
         padding: 6px
-        margin-right: -5px
+        margin-right: -6px
         svg
           height: 1em
           width: auto
