--- a/themes/stellar/layout/_partial/main/footer.ejs
+++ b/themes/stellar/layout/_partial/main/footer.ejs
@@ -2,7 +2,7 @@
 const content = theme.footer.content?.replace('${author.name}', (config.author || 'Anonymity'))?.replace('${theme.name}', stellar_info('name'))?.replace('${theme.version}', stellar_info('version'))?.replace('${theme.tree}', stellar_info('tree'))
 function layoutDiv() {
   var el = ''
-  el += `<footer class="page-footer${scrollreveal(' ')} fs12">`
+  el += `<footer class="page-footer${scrollreveal(' ')} footnote">`
   el += '<hr>'
   // sitemap
   if (theme.footer.sitemap && Object.keys(theme.footer.sitemap).length > 0) {
@@ -13,7 +13,7 @@ function layoutDiv() {
         continue
       }
       el += '<div class="sitemap-group">'
-      el += '<span class="fs14">' + group + '</span>'
+      el += '<span class="fs15">' + group + '</span>'
       items.forEach((item, i) => {
         el += '<a href="' + url_for(md_link(item)) + '">'
         el += __(md_text(item))
