--- a/themes/stellar/layout/_partial/main/navbar/article_top_area.ejs
+++ b/themes/stellar/layout/_partial/main/navbar/article_top_area.ejs
@@ -5,11 +5,11 @@ function layoutDiv() {
   }
   var el = ''
   // 1.main
-  el += `<div class="bread-nav fs12">`
+  el += `<div class="top bread-nav footnote">`
   // 2.left
   el += `<div class="left">`
   // 3.left.top: 面包屑导航
-  el += `<div id="breadcrumb">`
+  el += `<div class="flex-row" id="breadcrumb">`
     // 首页
     el += `<a class="cap breadcrumb" href="${url_for(config.root)}">${__("btn.home")}</a>`
     if (theme.wiki.tree[page.wiki]) {
