--- a/themes/stellar/layout/_partial/main/post_list/post_card.ejs
+++ b/themes/stellar/layout/_partial/main/post_list/post_card.ejs
@@ -69,9 +69,9 @@ function div_default() {
   // meta
   el += '<div class="meta cap">';
   el += '<span class="cap" id="post-meta">';
-  
+  el += icon('default:calendar')
   // time
-  el += __("meta.created") + '&nbsp;' + '<time datetime="' + date_xml(post.date) + '">' + date(post.date, config.date_format) + '</time>';
+  el += `<time datetime="${date_xml(post.date)}">${date(post.date, config.date_format)}</time>`
   el += '</span>';
   // cat
   if (post.categories && post.categories.length > 0) {
@@ -85,7 +85,8 @@ function div_default() {
       if (cats.length > 0) {
         let cat = cats.shift();
         el += '<span class="cap breadcrumb"' + category_color(cat) + '>';
-        el += cat;
+        el += icon('default:category')
+        el += `<span>${cat}</span>`
         el += '</span>';
       }
     }
