--- a/themes/stellar/source/css/_layout/layout.styl
+++ b/themes/stellar/source/css/_layout/layout.styl
@@ -3,6 +3,7 @@
   margin: auto
   padding: 0 var(--gap-l)
   justify-content: center
+  font-size: var(--fsp)
 
 .l_body .l_left
   z-index: 8
@@ -27,7 +28,7 @@
   left: 0
   width: 100%
   height: 100%
-  background: rgba(black, 0.5)
+  background: rgba(black, 0.2)
   z-index: 9
   opacity 0
   trans1 opacity
@@ -47,7 +48,7 @@
       max-width: 100%
   .l_body.mobile
     .l_left
-      transition: transform .3s ease-out
+      transition: transform .38s ease-out
   .l_body.mobile.sidebar
     .l_left
       transform: translateX(0px)
