--- a/themes/stellar/source/css/_layout/partial/related.styl
+++ b/themes/stellar/source/css/_layout/partial/related.styl
@@ -31,7 +31,8 @@ article.md-text.content+.related-wrap
     .title
       color: var(--text-p1)
       font-weight: 500
-      font-size: 1rem
+      --fsp: $fsp1
+      font-size: var(--fsp)
       trans2 color border
       position: relative
       padding-bottom: 2px
@@ -39,7 +40,8 @@ article.md-text.content+.related-wrap
       line-height: 1.6
     .excerpt
       color: var(--text-p3)
-      font-size: $fs-12
+      --fsp: $fsp3
+      font-size: var(--fsp)
       margin-top: 0.5rem
       display: -webkit-box
       -webkit-box-orient: vertical
@@ -65,14 +67,14 @@ article.md-text.content+.related-wrap
       padding: 1rem 0
     .note
       margin-bottom: 0.75rem
-      font-size: $fs-12
+      font-size: $fs-13
       color: var(--text-p4)
       font-weight: 500
     a
       margin: 0
       line-height: 1.2
       color: var(--text-p1)
-      font-size: $fs-h4
+      font-size: $fsh5
       &:hover
         color: $color-hover !important
     #next
@@ -80,7 +82,7 @@ article.md-text.content+.related-wrap
 .wiki+.related-wrap#read-next
   .item
     a
-      font-size: $fs-h3
+      font-size: $fsh3
     &#prev a
       color: var(--text-p3)
 
