--- a/themes/stellar/source/css/_layout/sidebar/logo.styl
+++ b/themes/stellar/source/css/_layout/sidebar/logo.styl
@@ -10,6 +10,7 @@
     height: 48px
     margin-right: 1rem
     border-radius: 4px
+    flex-shrink: 0
   a
     color: inherit
     display: flex
@@ -56,14 +57,14 @@
           animation-timing-function: linear
 
   a.title
-    font-size: 1.75rem
+    font-size: 1.5rem
     font-weight: 900
     color: inherit
     line-height: 1.2
     display: block
     position: relative
     .main
-      color: var(--text-p0)
+      color: var(--text)
     .sub
       color: var(--text-p1)
       trans2 opacity transform
