--- a/themes/stellar/source/css/_layout/tag-plugins/banner.styl
+++ b/themes/stellar/source/css/_layout/tag-plugins/banner.styl
@@ -1,4 +1,4 @@
-.tag-plugin.banner
+.banner
   border-radius: $border-card
   position: relative
   overflow: hidden
@@ -24,24 +24,34 @@
       align-items: center
       line-height: 1
       margin: 1rem
-      .navbar
+      .tag-plugin.navbar
         margin: 0
-        nav.cap
-          border-radius: 6px
-          background: rgba(black, 0.2)
+        border-radius: 6px
+        padding: 2px
+        background: rgba(black, 0.2)
+        overflow: hidden
+        &:after
+          content: none
         .link
+          margin: 0
+          border-radius: 4px
           color: rgba(white, 0.8)
           padding: 2px 6px
-          border-radius: 4px
           background: none
           line-height: 1.5
           font-size: $fs-15
+          text-shadow: 0 0 1px rgba(0,0,0,0.12)
+          &+.link
+            margin-left: 2px
+          &:after
+            content: none
+          &:hover
+            color: white
+            background: rgba(white, 0.25)
           &.active
             color: white
             background: rgba(white, 0.25)
-          &:hover
-            color: white
-            background: rgba(black, 0.5) !important
+        
       .back
         background: none
         padding: 0
@@ -82,25 +92,26 @@
     padding: 1rem
     width: 100%
     box-sizing: border-box
-    .title
-      font-size: 1.5rem
-      font-weight: 600
-    .avatar+.text-area
-      margin-left: 0.75rem
-    .text-area .text
-      line-height: 1.2
-      margin-top: 0.25rem
-      margin-bottom: 0.25rem
-    .avatar+.text-area .title
-      font-size: 1.2rem
-    .subtitle
-      font-size: $fs-14
+  .title
+    font-size: 1.5rem
+    font-weight: 600
+  .avatar+.text-area
+    margin-left: 0.75rem
+  .text-area .text
+    line-height: 1.2
+    margin-top: 0.25rem
+    margin-bottom: 0.25rem
+  .avatar+.text-area .title
+    font-size: 1.2rem
+  .subtitle
+    font-size: $fs-14
   .content:only-child
     color: var(--text-p1)
   .bg+.content 
     color: white
     .avatar
       border: 2px solid white
+      margin: 0
     .bottom
       background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.2))
       text-shadow: 0 0 1px rgba(0,0,0,0.12)
@@ -114,10 +125,13 @@
 .tag-plugin.banner .navbar a.active
   blur-effect()
 
-
-.tag-plugin.banner.author
-  @media screen and (min-width: $device-mobile-max)
+@media screen and (min-width: $device-mobile-max)
+  .banner.author.top
     margin-left: var(--gap-l)
     margin-right: var(--gap-l)
-  @media screen and (max-width: $device-mobile-max)
+  
+@media screen and (max-width: $device-mobile-max)
+  .banner.top
     border-radius: 0
+  .md-text.content:first-child .tag-plugin.banner:first-child
+    margin-top: 1rem
