--- a/themes/stellar/source/css/_layout/widgets/ghuser.styl
+++ b/themes/stellar/source/css/_layout/widgets/ghuser.styl
@@ -22,8 +22,8 @@
 
   p.username
     font-weight: 900
-    font-size: $fs-h2
-    color: var(--text-p0)
+    font-size: $fsh2
+    color: var(--text)
     margin: 0
   p.bio
     font-size: $fs-13
