--- a/themes/stellar/source/css/_custom.styl
+++ b/themes/stellar/source/css/_custom.styl
@@ -59,8 +59,8 @@ $fsp1 = 'calc(%s - 1px)' % $fs-body
 $fsp2 = 'calc(%s - 2px)' % $fs-body
 $fsp3 = 'calc(%s - 3px)' % $fs-body
 
+$border-card-l = convert(hexo-config('style.border-radius.card-l'))
 $border-card = convert(hexo-config('style.border-radius.card'))
-$border-block = convert(hexo-config('style.border-radius.block'))
 $border-bar = convert(hexo-config('style.border-radius.bar'))
 $border-image = convert(hexo-config('style.border-radius.image'))
 $border-button = 4px
@@ -95,9 +95,8 @@ $border-button = 4px
 
 // 文章布局风格
 .l_body.story
-  --fsp: 'calc(%s + 2px)' % $fs-body
-  --gap-p: 1.5rem
-  .tag-plugin,p>img
+  --gap-p: 2rem
+  div.tag-plugin,p>img
     margin-top: 2.4rem
     margin-bottom: 2.4rem
 
